create Login Page

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 </head>
-<body id="bodyApp" class="vertical-layout vertical-menu 2-columns  fixed-navbar  pace-done menu-collapsed">
+<body id="bodyApp" >
     <div id="app">
         
     </div>
